# db-benchmark

./: .gitignore  .history  PandasBench.PY  README  README.md  answers-validation.R  bench-exec.R  benchplot-dict.R  benchplot-dict2.R  benchplot.R  benchplot2.R  bigbench.R  ch.sh  clickhouse-active.sh  clickhouse-exec.sh  clickhouse-start.sh  clickhouse-stop.sh  data.csv  exit-chk-validation.R  groupby-datagen.R  groupby.Rmd  helpers.R  helpers.jl  helpers.py  helpers.scala  history.Rmd  history.html  index.Rmd  index.html  init-setup-iteration.R  join-datagen.R  join.Rmd  launcher.R  log-task-solution-data.R  log-task-solution.R  logs.csv  logs.csv.md5  nodenames.csv  path.env  publish.sh  (+18 more)
_benchplot/: benchplot-dict.R  benchplot.R
_control/: data.csv  nodenames.csv  questions.csv  solutions.csv  timeout.csv
_data/: groupby-datagen.R  groupby2014-datagen.R  join-datagen.R
_docs/: maintenance.md
_helpers/: helpers.R  helpers.jl  helpers.py  helpers.sh  helpersds.jl  lib-launcher.R
_launcher/: launch.R  launcher.R  setup.sh  solution.R
_report/: ga.html  history.Rmd  index.Rmd  publish.sh  report.R  tech.Rmd
_utils/: answers-validation.R  compare-data.table.R  generate-data-small.sh  groupby_k_factor.csv  install_all_solutions.py  maintainer.R  maintainer.sh  prep_solutions.py  repro.sh  setup-small.sh  tailtime.R  time.R  validate_no_errors.sh
arrow/: groupby-arrow.R  join-arrow.R  setup-arrow.sh  upg-arrow.sh  ver-arrow.sh
clickhouse/: ch.sh  clickhouse-parse-log.R  exec.sh  groupby-clickhouse.sql  groupby-clickhouse.sql.in  join-clickhouse.sql.in  setup-clickhouse.sh  upg-clickhouse.sh  ver-clickhouse.sh
cudf/: groupby-cudf.py  init-cudf.py  init-cudf.sh  join-cudf.py  setup-cuda.py  setup-cudf.sh  upg-cudf.sh  ver-cudf.sh
dask/: dask.sh  groupby-dask.py  (+7 more)
datafusion/: Cargo.toml  exec.sh  groupby-datafusion.py  join-datafusion.py  setup-datafusion.sh  upg-datafusion.sh  ver-datafusion.sh
datafusion/src/: main.rs
polars/join/: Cargo.toml  exec.sh
polars/join/src/: main.rs
(+154 files in other folders)
