[package]
name = "db-benchmark"
version = "0.1.0"
edition = "2018"

[dependencies]
datafusion = { git = "https://github.com/apache/arrow.git", features = ["simd"]}
arrow = { git = "https://github.com/apache/arrow.git", features = ["simd"]}
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"] }
snmalloc-rs = {version = "0.2", features= ["cache-friendly"]}
num_cpus = "1.0"

[profile.release]
lto = true
codegen-units = 1
