[package]
name = "db-benchmark"
version = "0.1.0"
edition = "2018"

[dependencies]
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", features = ["simd"]}
tokio = { version = "^1.0", features = ["macros", "rt", "rt-multi-thread"] }
snmalloc-rs = {version = "0.2", features= ["cache-friendly"]}
num_cpus = "1.0"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "groupby"
path = "src/bin/groupby.rs"

[[bin]]
name = "join"
path = "src/bin/join.rs"
