[package]
name = "polars-join"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {path= "/home/ritchie46/code/polars/polars"}
snmalloc-rs = {version = "0.2", features= ["cache-friendly"]}

[profile.release]
lto = true
codegen-units = 1
